# connexion-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .cfignore  .gitignore  .project  .pydevproject  MANIFEST.in  Makefile  Pipfile  Procfile  README.md  crashtestdummy.py  demo_api gunicorn.launch  development.ini  eclipse launch debug.launch  manifest.yml  setup.cfg  setup.py  sonar-project.properties  tox.ini
{{cookiecutter.project_slug}}/ci/: pipeline.yml  project-params.yml
{{cookiecutter.project_slug}}/ci/common/: build-params.yml  cd-params.yml
{{cookiecutter.project_slug}}/ci/common/scripts/: lib.sh
{{cookiecutter.project_slug}}/ci/common/tasks/: python-package.sh  python-package.yml  python-prep-push.sh  python-prep-push.yml  python-test.sh  python-test.yml  python-upload.sh  sonarqube-quality-gate.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  manage.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/api/: __init__.py  foo.py  health.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/api/actuator/: __init__.py  health.py  info.py  metrics.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/api/complicated/: __init__.py  complex.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/model/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/notapi/: hello.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/schema/: actuator.yml  app_v1.yml  swagger.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/ui/: hello.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/{% if cookiecutter.use_sql.startswith('y') %}model{% endif %}/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/{% if cookiecutter.use_ui.startswith('y') %}ui{% endif %}/: hello.py
{{cookiecutter.project_slug}}/tests/: __init__.py
{{cookiecutter.project_slug}}/tests/integration/: __init__.py  test_foo.py
{{cookiecutter.project_slug}}/tests/unit/: test_ApiSpec.py
