
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = {{cookiecutter.project_slug}}
#version = {{cookiecutter.version}}
description = {{cookiecutter.project_description}}
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
license = {{cookiecutter.license}}

[options]
# pick version from source control
use_scm_version = True
# can run from zip-file?
zip_safe = False
# include everything in source control
include_package_data = True
packages = find:
package_dir =
    = src

setup_requires = 
    pytest-runner
    setuptools_scm
tests_require = 
    pytest >= 3.0.7
    pytest-cov >= 2.5.0
install_requires =
    # Web Framework
    flask
    flask-debugtoolbar
    connexion
    prance >= 0.8
    pyyaml
    cfenv
    {%- if cookiecutter.use_sql.startswith('y') %}
    # Database
    Flask-SQLAlchemy
    {% endif %}
    # UI
    #Jinja2    
    # Web App-Server
    gunicorn
    plaster_pastedeploy
    # Basics
    PyYAML==3.12
    typing >= 3.6.1; python_version < "3.6"

[options.entry_points]
paste.app_factory = main={{cookiecutter.project_slug}}:main

[options.data_files]
{{cookiecutter.project_slug}} = schema/*.yml

[options.packages.find]
where = src, tests

[options.extras_require]

[aliases]
# setup.py aliases
test=pytest

[tool:pytest]
# additional options for pytest
addopts = 

[flake8]
# flake8 linter configuration
max-line-length=120