
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = {{cookiecutter.project_slug}}
description = {{cookiecutter.project_description}}
author = {{cookiecutter.author}}
author_email = {{cookiecutter.email}}
license = {{cookiecutter.license}}

[options]
# pick version from source control
use_scm_version = True
# can run from zip-file?
zip_safe = False
# include everything in source control
include_package_data = True
packages = find:
package_dir =
    = src

setup_requires = 
    pytest-runner
    setuptools_scm
tests_require = 
    pytest
    pytest-cov
    # Linter u.a. für VSCode
    pydocstyle
    flake8
install_requires =
    # Web Framework
    flask
    flask-debugtoolbar
    flask-scripting
    connexion
    prance
    werkzeug
    {%- if cookiecutter.use_reldb.startswith('y') %}
    # Database
    flask_sqlalchemy
    flask-migrate
    mysqlclient
    {%- endif %}
    {%- if cookiecutter.use_ui.startswith('y') %}
    # UI
    Jinja2    
    {% endif -%}
    # Web App-Server
    gunicorn
    plaster_pastedeploy
    # Cloud Support
    cfenv
    redis
    # Monitoring
    psutil
    # Basics
    PyYAML
    # Python 3.6 type hints
    typing >= 3.6.1; python_version < "3.6"

[options.entry_points]
paste.app_factory = main={{cookiecutter.project_slug}}:main
console-scripts =
	manage = {{cookiecutter.project_slug}}.manage:main

[options.package_data]
{{cookiecutter.project_slug}} =
    model/migrate_repository/*
    schema/*.yml

[options.packages.find]
where = src, tests

[options.extras_require]

[aliases]
# setup.py aliases
test=pytest

[tool:pytest]
# additional options for pytest
addopts = 

[flake8]
# flake8 linter configuration
max-line-length=120
