
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = {{cookiecutter.project_slug}}
description = {{cookiecutter.project_description}}
author = {{cookiecutter.username}}
author_email = {{cookiecutter.email}}
url = {{git_web}}
license = {{cookiecutter.license}}

[options]
# can run from zip-file?
zip_safe = False
# include everything in source control
include_package_data = True
packages = find:
package_dir =
    = src

setup_requires = 
    pytest-runner
    setuptools_scm
    wheel
tests_require = 
    pytest >= 3.1
    pytest-cov         # sonarqube coverage
    pytest-flake8
    pytest-pylint      # sonarqube additional linting
    pytest-pydocstyle
install_requires =
    # Web Framework
    flask
    flask-debugtoolbar
    flask-script
    connexion
    prance
    werkzeug
    {%- if cookiecutter.use_reldb.startswith('y') %}
    # Database
    flask_sqlalchemy
    flask-migrate
    mysqlclient
    {%- endif %}
    {%- if cookiecutter.use_ui.startswith('y') %}
    # UI
    Jinja2    
    {% endif -%}
    # Web App-Server
    gunicorn
    plaster_pastedeploy
    # Cloud Support
    cfenv
    redis
    # Monitoring
    psutil
    # Basics
    PyYAML
    # Python 3.6 type hints
    typing >= 3.6.1; python_version < "3.6"

[options.entry_points]
paste.app_factory = main={{cookiecutter.project_slug}}:main
console-scripts =
	manage = {{cookiecutter.project_slug}}.manage:main

[options.packages.find]
where = src, tests

[options.package_data]
{{cookiecutter.project_slug}} =
    model/migrate_repository/*
    schema/*.yml

[options.data_files]
etc/{{cookiecutter.project_slug}}/development.ini = development.ini

[options.extras_require]

[aliases]
# setup.py aliases
test=pytest

[tool:pytest]
# additional options for pytest
addopts = --cov=demos_flask_apifirst --cov-report=term --cov-report=xml:test-coverage.xml --junitxml=test-report.xml

[bdist_wheel]
universal = 1

[flake8]
# flake8 linter configuration
max-line-length=120
ignore =
    W293 # blank line contains whitespace

[pydocstyle]
ignore =
    D210 # white-space after pydocstyle quotes